Fixing vw width to % to fix any extra gap on mobile screen because it includes the scrollbar

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  /* outline: 1px solid red; */
 }
 
 html {
@@ -272,13 +273,13 @@ input {
 
 #goodies {
   height: 100%;
-  width: 100vw;
+  width: 100%;
   padding-top: 6.2rem;
 }
 
 .container {
   background: linear-gradient(180deg, #3a90c2 0%, #F7F0E6 95%, #F7F0E6 80%);
-  max-width: 100vw;
+  max-width: 100%;
 
 }
 
